Kinda fix the contact animation
Adding a "projects" link in the navigation made the nav too wide, so the
contact animation is broken, since displaying the mailto overflows and
the animation either does not work (firefox), or puts the mailto on a
next line (chrome) creating flashing content.

--- a/app.css
+++ b/app.css
@@ -149,9 +149,6 @@ footer {
     padding: var(--s-2) var(--s1);
     margin-bottom: var(--s0);
   }
-  #contact {
-    margin-left: var(--s1);
-  }
 }
 .home nav a {
   @apply underline;
@@ -161,6 +158,10 @@ footer {
 /*********************************
  * contact link mailto animation *
  *********************************/
+
+#contact {
+  display: inline-block;
+}
 
 #contact ul {
   position: relative;
@@ -178,6 +179,7 @@ footer {
   position: absolute;
   top: 0;
   @apply bg-white text-black;
+  font-family: var(--font-mono);
 }
 #contact ul:hover li:nth-child(1) {
   transform: rotateX(90deg) translateZ(20px);
